        - Doc pathces from cogent.
        - Fixed out of bounds access on bitmap for flood fills.
        - some char * vs unsigned char * casts missing on OSF1 v4.0
        - some enums had , on the last item in datatypes.h, which OSF1
          didn't like
        - Compaq C 6.4 (OSF1) claims to be C99 but doesn't provide 
          stdint.h, don't try to use it under OSF
        - fix missing initialization in tags.c
        - Change i_draw to i_line and have it use Bresenham's line
          drawing algorithm.
        - support has_chars() method for Freetype 1.x
        - fixed log message for i_ft2_has_chars()
        - fixed some broken checking for UTF8 in FT2 code
        - handle UTF8 strings passed to T1 low-level functions
        - handle flags for underline, strikethrough and overline for T1
          low-level output functions
        - OO interfaces to UTF8 and flags, for now leaving the flags as
          specific to Imager::Font::Type1
        - mc_web_map was storing colors with an alpha of 0
        - update the URLs for libpng and zlib
        - Fixed empty string handling for tt font driver.
        - Fixed tiff handling of images all contained in a 
          single strip (rowsperstrip = -1) and added a hack
          for images missing the rowsperstrip tag.
        - Fixed default parameters for crop()
        - Added Preliminary specialized scaling code.
        - Added image type detection.
        - added smoke test for win32 font bounding_box() method, and
          fixed the problem reported in ticket #1748.
        - update t37w32font.t to use i_line() instead of i_draw()
        - replaced non-portable call to rint() with (int)(dy+0.5) (so we
          can build on Win32)

=================================================================

        For latest versions check the Imager-devel pages:
        http://www.eecs.umich.edu/~addi/perl/Imager/devel/

=================================================================
